Fix spacecmd reference, add recomendation to keep default 8022 port

--- a/modules/installation-and-upgrade/pages/proxy-container-setup.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-setup.adoc
@@ -24,7 +24,7 @@ There are two ways how to generate {productname} configuration: use web interfac
 
 . In the [guimenu]``Parent FQDN`` field type fully qualified domain name for the {productname} Server or another {productname} Proxy.
 
-. In the [guimenu]``Proxy SSH port`` field type SSH port on which SSH service is listening on {productname} Proxy.
+. In the [guimenu]``Proxy SSH port`` field type SSH port on which SSH service is listening on {productname} Proxy. Recommended is to keep default 8022.
 
 . In the [guimenu]``Max Squid cache size [MB]`` field type maximal allowed size for Squid cache. Typically this should be at most 60% of available storage for the containers.
 
@@ -52,7 +52,7 @@ spacecmd proxy_container_config_generate_cert -- <proxy_fqdn> <oarent_fqdn> <squ
 +
 This will generate file `config.zip` with configuration for the {productname} Proxy containers.
 +
-For more information about [literal]`spacecmd` container proxy generation see xref:reference/pages/spacecmd/proxy_container.adoc[].
+For more information about [literal]`spacecmd` container proxy generation see xref:reference:spacecmd/proxy_container.adoc[].
 
 
 Irrespective of what method is used to generate {productname} Proxy container configuration, new system entry will appear in system list. This new entry will be shown under previously entered [literal]``Proxy FQDN`` value and will be of [literal]``Foreign`` system type.
