more version and name changes
cosmetic drive-bys

--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -21,15 +21,15 @@ These are suitable for a quick test installation, such as a server with one clie
 If you want to use a production environment, review the requirements listed in xref:hardware-requirements.adoc[].
 ====
 
-In the following table replace _version_ with the actual product version string.
-Find the JeOS image at https://download.suse.com/.
+In the following table replace {sles-version}-{sp-version} with the actual product version string.
+Find the {minimalsles} image at https://download.suse.com/.
 
 [cols="1,1", options="header"]
 |===
 2+<| KVM Settings
 | Installation Method | Import Existing Disk Image
 | OS:                 | Linux
-| Version:            | SLES_version_-JeOS-for-kvm-and-xen.x86_64-GM.qcow2
+| Version:            | SLES{sles-version}-{sp-version}-{minimal}-VM.x86_64-kvm-and-xen-GM.qcow2
 | Memory:             | 8192 MB
 | CPU's:              | 4
 | Storage Format:     | _.qcow2_ 24 GB (Default) JeOS Root Partition
@@ -49,16 +49,16 @@ For more information on {sle} Virtualization Guide, see https://documentation.su
 
 
 [[jeos.kvm.settings]]
-== JeOS KVM Settings
+== Minimal SLES KVM Settings
 
 Create three additional virtual disks required for the {productname} storage partitions.
 
 .Procedure: Creating the Required Partitions with KVM
-. Create a new virtual machine using the downloaded JeOS KVM image and select [guimenu]``Import existing disk image``.
+. Create a new virtual machine using the downloaded {minimal} KVM image and select [guimenu]``Import existing disk image``.
 . Configure RAM and number of CPUs (at least 8 GB RAM and 4 CPUs).
 . Name your KVM machine and select the [guimenu]``Customize configuration before install`` check box.
 . Click btn:[Add Hardware] to create three new virtual disks with these specifications.
-    These disks will be partitioned and mounted in <<proc.jeos.susemgr.prep>>.
+  These disks will be partitioned and mounted in <<proc.jeos.susemgr.prep>>.
 +
 
 [NOTE]
@@ -77,9 +77,9 @@ Also consider to create a separate partition for [path]``/srv`` where Kiwi image
 | VirtIO Disk 4        | swap      | 4{nbsp}GB
 |===
 
-. Click btn:[Begin Installation] to boot the new VM from the JeOS image.
+. Click btn:[Begin Installation] to boot the new VM from the {minimalsles} image.
 
-Follow the prompts to complete the basic JeOS installation, until the process is complete and the command prompt waits for input.
+Follow the prompts to complete the basic {minimalsles} installation, until the process is complete and the command prompt waits for input.
 
 During the basic installation prompts you are asked to enter the root password.
 In the next message box click btn:[Confirm root Password].
@@ -87,10 +87,10 @@ In the next message box click btn:[Confirm root Password].
 
 
 [[jeos.susemgr.prep]]
-== Preparing JeOS for SUSE Manager
+== Preparing {minimalsles} for SUSE Manager
 
 [[proc.jeos.susemgr.prep]]
-.Procedure: Preparing JeOS for {productname} Installation
+.Procedure: Preparing {minimalsles} for {productname} Installation
 
 // Most steps are currently needed because of 4.0 workarounds
 . Log in as `root`.
@@ -114,14 +114,14 @@ SUSEConnect -e <EMAIL_ADDRESS> -r <SUSE_MANAGER_CODE> \
 +
 
 ----
-SUSEConnect -p sle-module-basesystem/15.3/x86_64
-SUSEConnect -p sle-module-python2/15.3/x86_64
-SUSEConnect -p sle-module-server-applications/15.3/x86_64
-SUSEConnect -p sle-module-web-scripting/15.3/x86_64
+SUSEConnect -p sle-module-basesystem/15.4/x86_64
+SUSEConnect -p sle-module-python2/15.4/x86_64
+SUSEConnect -p sle-module-server-applications/15.4/x86_64
+SUSEConnect -p sle-module-web-scripting/15.4/x86_64
 SUSEConnect -p sle-module-suse-manager-server/<productnumber>/x86_64
 ----
 +
-JeOS is configured to install only required packages.
+{minimalsles} is configured to install only required packages.
 To get all features working you should allow to install also recommended packages.
 In `/etc/zypp/zypp.conf` change:
 +
@@ -138,7 +138,7 @@ solver.onlyRequires = false
 ----
 
 . Install [package]#yast2-storage-ng# with all required dependencies (approx. 40 packages, 30 MB when installed).
-    This basic administration package is required for preparing storage partitions:
+  This basic administration package is required for preparing storage partitions:
 +
 
 ----
