--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -32,7 +32,7 @@ Find the {minimalsles} image at https://download.suse.com/.
 | Version:            | SLES{sles-version}-{sp-version}-{minimal}-VM.x86_64-kvm-and-xen-GM.qcow2
 | Memory:             | 8192 MB
 | CPU's:              | 4
-| Storage Format:     | _.qcow2_ 24 GB (Default) JeOS Root Partition
+| Storage Format:     | _.qcow2_ 24 GB (Default) Minimmal Root Partition
 | Virtual Disks:      |
 | VirtIO Disk 2       | 101 GB for [path]``/var/spacewalk``
 | VirtIO Disk 3       | 50 GB for [path]``/var/lib/pgsql``
@@ -48,7 +48,7 @@ For more information on {sle} Virtualization Guide, see https://documentation.su
 
 
 
-[[jeos.kvm.settings]]
+[[minimmal.kvm.settings]]
 == Minimal SLES KVM Settings
 
 Create three additional virtual disks required for the {productname} storage partitions.
@@ -58,7 +58,7 @@ Create three additional virtual disks required for the {productname} storage par
 . Configure RAM and number of CPUs (at least 8 GB RAM and 4 CPUs).
 . Name your KVM machine and select the [guimenu]``Customize configuration before install`` check box.
 . Click btn:[Add Hardware] to create three new virtual disks with these specifications.
-  These disks will be partitioned and mounted in <<proc.jeos.susemgr.prep>>.
+  These disks will be partitioned and mounted in <<proc.minimmal.susemgr.prep>>.
 +
 
 [NOTE]
@@ -86,10 +86,10 @@ In the next message box click btn:[Confirm root Password].
 
 
 
-[[jeos.susemgr.prep]]
+[[minimmal.susemgr.prep]]
 == Preparing {minimalsles} for SUSE Manager
 
-[[proc.jeos.susemgr.prep]]
+[[proc.minimmal.susemgr.prep]]
 .Procedure: Preparing {minimalsles} for {productname} Installation
 
 // Most steps are currently needed because of 4.0 workarounds
