Apply suggestions from code review
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/installation-and-upgrade/pages/proxy-container-setup.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-setup.adoc
@@ -52,7 +52,7 @@ spacecmd proxy_container_config_generate_cert -- <proxy_fqdn> <oarent_fqdn> <squ
 +
 This will generate file `config.zip` with configuration for the {productname} Proxy containers.
 +
-For more information about [literal]`spacecmd` container proxy generation see xref:reference:spacecmd/proxy_container.adoc[].
+For more information about [literal]`spacecmd` container proxy generation, see xref:reference:spacecmd/proxy_container.adoc[].
 
 
 Irrespective of what method is used to generate {productname} Proxy container configuration, new system entry will appear in system list. This new entry will be shown under previously entered [literal]``Proxy FQDN`` value and will be of [literal]``Foreign`` system type.
