--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -42,9 +42,9 @@ Only {sles} 15 SP3 and newer are supported to be used as container host for {pro
 
 [NOTE]
 ====
-Container host used as a base for {productname} Proxy containers needs to be first registered as a salt client to the {productname} Server.
+Container host used as a base for {productname} Proxy containers needs to be first registered as a Salt client to the {productname} Server.
 
-For more information how to register salt client to the {productname} Server see xref:client-configuration:registration-overview.adoc[].
+For more information about registering Salt client to the {productname} Server, see xref:client-configuration:registration-overview.adoc[].
 ====
 
 [NOTE]
@@ -54,7 +54,7 @@ For more information how to register salt client to the {productname} Server see
 
 {productname} Proxy containers are using [literal]``podman`` and [literal]``systemd`` to run and manage all proxy containers.
 
-First step is to install containers control files provided by package [literal]``uyuni-proxy-systemd-services``
+First step is to install container control files provided by package [literal]``uyuni-proxy-systemd-services``.
 
 
 [[proc-installation-proxy-containers-services]]
@@ -62,7 +62,7 @@ First step is to install containers control files provided by package [literal]`
 
 . Assign [literal]``Containers Module`` software channel to the container host in the {productname}.
 +
-For information how to assign software channels to the system see xref:administration:channel-management.adoc[].
+For more information about assigning software channels to the system, see xref:administration:channel-management.adoc[].
 
 . Log in as `root` on the container host.
 
@@ -79,15 +79,15 @@ zypper install uyuni-proxy-systemd-services
 {productname} Proxy containers require some volumes to be mounted for long term storage.
 Paths on container host for those volumes are by default:
 
-- [path]`/var/lib/uyuni/proxy-squid-cache`
-- [path]`/var/lib/uyuni/proxy-rhn-cache`
-- [path]`/var/lib/uyuni/proxy-tftpboot`
+- [path]``/var/lib/uyuni/proxy-squid-cache``
+- [path]``/var/lib/uyuni/proxy-rhn-cache``
+- [path]``/var/lib/uyuni/proxy-tftpboot``
 
-To modify location of those paths, please edit [path]`/etc/sysconfig/uyuni-proxy-systemd-services.config`.
+To modify location of those paths, edit [path]``/etc/sysconfig/uyuni-proxy-systemd-services.config``.
 
 In this file it is possible to add custom arguments passed to podman container pod:
 
-- [literal]`EXTRA_POD_ARGS=''`
+- [literal]``EXTRA_POD_ARGS=''``
 
 In this file it is possible to modify path where proxy configuration is expected, however modifying it is strongly discouraged:
 
