--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -70,6 +70,7 @@ endif::[]
 ** xref:ssl-certs.adoc[SSL Certificates]
 *** xref:ssl-certs-selfsigned.adoc[Self-Signed SSL Certificates]
 *** xref:ssl-certs-imported.adoc[Imported SSL Certificates]
+*** xref:ssl-certs-hsts.adoc[HTTP Strict Transport Security]
 // Subscription matching
 ** xref:subscription-matching.adoc[Subscription Matching]
 // Tasks
