--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -62,6 +62,7 @@ On the {productname} Hub it is replaced with the real server id the managed serv
 
 Another common additional field is `synced_date`, which represents the time when the data were exported from the main {productname} Server database.
 
+Schema documentation can be found by going on the Left Navigation Bar "Help" -> "Report Database Schema".
 
 == Data Generation and Update
 
