Mass Migration: start enhancement - add warning
https://github.com/SUSE/spacewalk/issues/17046

--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -72,6 +72,16 @@ If you want to migrate a large number of clients to the next SP version, you can
 
 
 
+[WARNING]
+====
+Warnings about potential dangers of this operation
+
+    The Process should be tested thoroughly (do a dry-run first, etc)
+    Be careful not to upgrade systems unintentionally
+====
+
+
+
 .Procedure: Performing a Product Mass Migration
 . List available migration targets, and take note of the system IDs you want to migrate:
 +
