--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -1,5 +1,5 @@
 [[installation-proxy-containers]]
-= Prepare container host for {productname} Proxy containers
+= Install Containerized {productname} Proxy
 
 [NOTE]
 ====
