--- a/modules/installation-and-upgrade/pages/proxy-container-setup.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-setup.adoc
@@ -1,5 +1,5 @@
 [[proxy-setup-containers]]
-= {productname} Proxy Containers Setup
+= Containerized {productname} Proxy Setup
 
 Once container host for {productname} Proxy containers is prepared, setup of containers require few additional steps to finish configuration.
 
