Apply suggestions from code review
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -745,7 +745,7 @@ The generated pillar is available to all connected clients.
 
 
 Building an image requires several dependent steps.
-When the build fails, investigating Salt states results and Build log can help identify the source of the failure.
+When the build fails, investigating Salt states results and build log can help identify the source of the failure.
 You can carry out these checks when the build fails:
 
 * The build host can access the build sources
@@ -776,7 +776,7 @@ A list of all images is displayed.
 
 image::images_list_images.png[scaledwidth=80%]
 
-Displayed data about images includes an image [guimenu]``Name``, its [guimenu]``Version``, [guimenu]``Revision`` and the build [guimenu]``Status``.
+Displayed data about images includes an image [guimenu]``Name``, its [guimenu]``Version``, [guimenu]``Revision``, and the build [guimenu]``Status``.
 You can also see the image update status with a listing of possible patch and package updates that are available for the image.
 
 For OS Images, the [guimenu]``Name`` and [guimenu]``Version`` fields originate from Kiwi sources and are updated at the end of successful build.
@@ -784,14 +784,14 @@ During building or after failed build these fields show a temporary name based o
 
 [guimenu]``Revision`` is automatically increased after each successful build. For OS Images, multiple revisions can co-exist in the store.
 
-For Container Images the store holds only the latest revision. Information about previous revisions (packages, patches, etc.)
-are preserved and it is possible to list them with the [guimenu]``Show obsolete`` checkbox.
+For Container Images the store holds only the latest revision.
+Information about previous revisions (packages, patches, etc.) are preserved and it is possible to list them with the [guimenu]``Show obsolete`` checkbox.
 
 Clicking the btn:[Details] button on an image provides a detailed view.
 The detailed view includes an exact list of relevant patches, list of all packages installed within the image and a build log.
 
-Clicking the btn:[Delete] button deletes the image from the list. It also deletes the associated pillar, files from OS Image Store
-and obsolete revisions.
+Clicking the btn:[Delete] button deletes the image from the list.
+It also deletes the associated pillar, files from OS Image Store and obsolete revisions.
 
 [NOTE]
 ====
