re-phrase warning

--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -74,10 +74,10 @@ If you want to migrate a large number of clients to the next SP version, you can
 
 [WARNING]
 ====
-Warnings about potential dangers of this operation
-
-    The Process should be tested thoroughly (do a dry-run first, etc)
-    Be careful not to upgrade systems unintentionally
+The product mas migration operation is dangerous.
+Be careful not to upgrade systems unintentionally.
+The process should be tested thoroughly.
+At least,(do a dry-run first.
 ====
 
 
