--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -41,6 +41,7 @@ endif::[]
 ifeval::[{suma-content} == true]
 *** xref:install-proxy.adoc[Install Proxy from Packages]
 endif::[]
+*** xref:proxy-container-installation.adoc[Install Containerized Proxy]
 *** xref:install-pubcloud.adoc[Install on Public Cloud]
 ifeval::[{suma-content} == true]
 *** xref:install-ibmz.adoc[Install on IBM Z]
@@ -60,6 +61,7 @@ ifeval::[{uyuni-content} == true]
 *** xref:uyuni-proxy-registration.adoc[Uyuni Proxy Registration]
 *** xref:uyuni-proxy-setup.adoc[Uyuni Proxy Setup]
 endif::[]
+*** xref:proxy-container-setup.adoc[Containerized Proxy Setup]
 *** xref:pubcloud-setup.adoc[Public Cloud Setup]
 *** xref:webui-setup.adoc[Web Interface Setup]
 *** xref:setup-wizard.adoc[Setup Wizard]
