note about selecting appropriate architecture (#1529)
* add a note about
  selecting the appropriate architecture
https://github.com/SUSE/spacewalk/issues/17459

* Update modules/client-configuration/pages/registration-overview.adoc

Co-authored-by: Ornela Marić <omaric@suse.com>

* create arch-other note and use it
drive-by: remove superfluous note tag

* include arch-other note to all "add software channel sections

* update changelog entry

* Update .changelog

revert

* changelog entry: more revert

* remove here superfluos note

Co-authored-by: Ornela Marić <omaric@suse.com>
Co-authored-by: Joseph Cayouette <jcayouette@suse.com>

--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -129,6 +129,8 @@ This requires that you perform the import procedure three times, to create three
 
 Before you register {redhat} clients to your {productname} Server, you need to add the required software channels, and synchronize them.
 
+include::snippets/arch-other-note.adoc[]
+
 ifeval::[{suma-content} == true]
 
 Your {susemgr} subscription entitles you to the tools channels for {sleses} (also known as {redhat} Expanded Support or RES).
