--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -77,7 +77,7 @@ If you want to migrate a large number of clients to the next SP version, you can
 The product mas migration operation is dangerous.
 Be careful not to upgrade systems unintentionally.
 The process should be tested thoroughly.
-At least,(do a dry-run first.
+At least, do a dry-run first.
 ====
 
 
