--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -80,6 +80,14 @@ The process should be tested thoroughly.
 At least, do a dry-run first.
 ====
 
+The [command]``spacecmd`` commandline tool provides a [systemitem]``system_scheduleproductmigration`` sub command, which can be used to schedule a migration for a large number of clients to the next minor version.
+
+To see syntax usage and options for [systemitem]``system_scheduleproductmigration``, run:
+
+----
+spacecmd system_scheduleproductmigration help
+----
+
 
 
 .Procedure: Performing a Product Mass Migration
