Add Salt Bundle details

--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -37,6 +37,7 @@ endif::[]
 ** xref:contact-methods-intro.adoc[Client Management Methods]
 *** xref:contact-methods-salt.adoc[Managing Salt Clients]
 **** xref:contact-methods-saltssh.adoc[Push via Salt SSH]
+**** xref:contact-methods-saltbundle.adoc[Salt Bundle]
 **** xref:contact-methods-salt-cfgfile.adoc[Salt Minion Configuration File]
 *** xref:contact-methods-traditional.adoc[Managing Traditional Clients]
 **** xref:contact-methods-rhnsd.adoc[rhnsd]
