Adding new workflow and images.

--- a/modules/common-workflows/nav-common-workflows-guide.adoc
+++ b/modules/common-workflows/nav-common-workflows-guide.adoc
@@ -12,6 +12,7 @@ endif::[]
 * xref:common-workflows-overview.adoc[Common Workflows]
 ** xref:workflow-configuration-management.adoc[Configuration Management]
 ** xref:workflow-content-lifecycle-management.adoc[Content Lifecycle Management]
+** xref:workflow-inplace-sles-upgrade.adoc[In-place Upgrade of SLES with {productname}]
 ** xref:workflow-onboarding.adoc[Onboarding]
 
 // License
