--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -34,7 +34,7 @@ image::wf-inplaceMigration-01.png[scaledwidth=80%]
 image::wf-inplaceMigration-02.png[scaledwidth=80%]
 +
 . (Optional) Create a bootstrap script - although the profile will not need it, since it is managed in the AutoYaST.
-. Create a [path]``/var/spacewalk/iso`` directory, and for SLES 15 SP2 and following, copy the [literal]``Full iso`` (>10GB) there.  
+. Create a [path]``/var/spacewalk/iso`` directory, and for SLES 15 SP2 and following, copy the [literal]``Full iso`` (>10 GB) there.  
   Create a mount point for it, such as [path]``/opt/install/15sp3`` and mount the ISO there.  
   Ensure this path gets re-mounted at boot time. 
 . Create an Autoinstallation Distribution in {productname} for each base channel to which you will migrate.  
@@ -46,8 +46,18 @@ image::wf-inplaceMigration-02.png[scaledwidth=80%]
 +
 image::wf-inplaceMigration-03.png[scaledwidth=80%]
 +
-. Click on Profiles, and Upload Kickstart/Autoyast File for each target SLES distribution, service pack and channels you wish to migrate TO.  This profile will be associated with the Activation Key and Autoinstallation Distribution you created above. Cut-and-paste a Profile template as the basis for what you upload , assign it the Autoinstall tree you created as a Distribution above.  Do not put anything in the 'Virtualizaton Type' box, and select 'Create'
-. Once created, your Profile will now have some new fields on this Details page.  In the Kernel Options line on this Details page, put in 'autoupgrade=1 insecure=1 useonlinerepo '  This will tell your profile to treat its install as an upgrade, and allow http access to the SUSE Manager server to obtain installer updates without needing to go to SUSE Customer Center.
+. Click on [guimenu]``Profiles``, and upload Kickstart/Autoyast File for each target SLES distribution, service pack and channels you wish to migrate to.  
+  This profile will be associated with the activation key and autoinstallation istribution created above. 
+  Cut-and-paste a [literal]``Profile`` template as the basis for what you upload, assign it the [literal``Autoinstall tree`` you created as a [literal]``Distribution`` above.  
+  Do not put anything in the [literal]``Virtualizaton Type`` box, and select [btn]``Create``.
+. Once created, your profile will now have some new fields on this [guimenu``Details`` page.  
+  In the [literal]``Kernel Options`` line on this [literal]``Details`` page, put in
++
+----
+autoupgrade=1 insecure=1 useonlinerepo
+----
++
+. This will tell your profile to treat its install as an upgrade, and allow http access to the {productname} Server to obtain installer updates without needing to go to {scc}.
 +
 image::wf-inplaceMigration-04.png[scaledwidth=80%]
 +
@@ -63,7 +73,10 @@ Sample Variables:
 * [literal]``channel_prefix=15sp1-demo-test``
 * [literal]``distrotree=15sp1-demo-test``
 
-Edit the autoyast profile itself in a tool where you can use cut-and-paste for the channels in your profile.  Use variables in your profiles where possible.  Much time has gone into creating some useful Profiles which should be used as a starting point.  There are links at the bottom of this document.
+Edit the autoyast profile itself in a tool where you can use cut-and-paste for the channels in your profile.  
+Use variables in your profiles where possible.  
+Much time has gone into creating some useful Profiles which should be used as a starting point.  
+There are links at the bottom of this document. (<< ARE THERE? THEY ARE VERY BIG TO BE ADDED TO TEH DOC. HOW CAN WE DISTRIBUTE THEM?)
 
 The profile follows autoyast xml guidelines, and for an in-place upgrade there are several important sections:
 
@@ -97,23 +110,31 @@ For {trad} clients, go to <<in-place-migration-traditional-clients>>.
 Procedure: Migrating Salt minions
 [role=procedure]
 
-. Prior to migration, be sure to check Software → Non-Compliant.  This will show any 'orphaned' packages on your system - those SUSE Manager does not find in any assigned channel.  Make sure this list is very small or empty, and that you can account for all the packages there.  Delete any that are unnecessary.
+. Prior to migration, be sure to check Software → Non-Compliant.  
+  This will show any orphaned packages on your system - those {productname} does not find in any assigned channel.  
+  Make sure this list is very small or empty, and that you can account for all the packages there.  
+Delete any that are unnecessary.
 +
-. Before provisioning, issue the following Remote Command to the system(s) you wish to upgrade to remove the existing SUSE Manager channels during the upgrade process: 
+. Before provisioning, issue the following Remote Command to the system(s) you wish to upgrade to remove the existing {productname} channels during the upgrade process: 
 +
 ----
 rm -rf /etc/zypp/repos.d/susemanager*
 ----
 +
-. Assign your Autoinstallation Profile in System Details>Provisioning for one system, or in the Provisioning tab in SSM for as many systems as you need. SUSE Manager provisioning then auto-assigns a Reactivation Key to this system, that is referenced in the provisioning process.  If you need to perform the upgrade through a particular SUSE Manager Proxy you will need to group just those systems together in SSM.
+. Assign your Autoinstallation Profile in [guimenu]``System Details>Provisioning`` for one system, or in the [literal]``Provisioning`` tab in SSM for as many systems as you need. 
+  {productname} provisioning then auto-assigns a Reactivation Key to this system, that is referenced in the provisioning process.  
+  If you need to perform the upgrade through a particular {productname} Proxy you will need to group just those systems together in SSM.
 +
 image::wf-inplaceMigration-06.png[scaledwidth=80%]
 +
 image::wf-inplaceMigration-07.png[scaledwidth=80%]
 
-SUSE Manager creates the proper entry in /etc/grub.d/ for the 'reinstallation', and boots the selected system(s) to that entry.  The Profile you created above will be used to drive automated upgrade, following which your system will use the reactivation key (one time), associating the upgraded system with the previous SUSE Manager profile.
+{productname} creates the proper entry in [path]``/etc/grub.d/`` for the reinstallation, and boots the selected system(s) to that entry.  
+ The Profile you created above will be used to drive automated upgrade, following which your system will use the reactivation key (one time), associating the upgraded system with the previous {productname} profile.
 
-The Session Status screen in SUSE Manager will not be updated real-time for salt minions.  Instead, watch the target system console to track progress.   If you are updating an instance on a hyperscaler like AWS you may be able to get screenshots of the console.
+The Session Status screen in {productname} will not be updated real-time for {salt} minions.  
+Instead, watch the target system console to track progress.   
+If you are updating an instance on a hyperscaler like AWS you may be able to get screenshots of the console.
 
 image::wf-inplaceMigration-08.png[scaledwidth=80%]
 
@@ -134,7 +155,7 @@ Procedure: Migrating {trad} clients
 
 . If your system is not able to use PXE, you can create an ISO to install with cobbler commands using the SUSE Manager server CLI. 
   Copy the ISO file output to the machine you wish to migrate and boot from it. 
-View all the profiles with this:
+  View all the profiles with this:
 +
 ----
 cobbler profile list
@@ -160,19 +181,10 @@ The [literal]``--iso=`` section is the output of the [literal]``buildiso`` comma
 . Copy this ISO to the virtualization environment where your system can use it as boot media.
 
 
-Additional files:
+//Additional files - Examples
 
-* update-12-to-15sp3-with-comments
-* update-to-15sp2-sap-cloud-20210430.txt
-* profile-salt-minion-to-https-12sp5-demo-test.txt
-* profile-salt-minion-to-https-15sp1-demo-test.txt
+//* update-12-to-15sp3-with-comments
+//* update-to-15sp2-sap-cloud-20210430.txt
+//* profile-salt-minion-to-https-12sp5-demo-test.txt
+//* profile-salt-minion-to-https-15sp1-demo-test.txt
 
-= DO OVDJE.....
-
-== Related topics
-// This section can contain links to chapters in other documentation books where the background and more details about the area this workflow is related to are given
-
-* For more information about ..., see xref:...adoc[].
-
-
-// IMPORTANT: Delete all template comments before submitting the PR
