--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -36,6 +36,10 @@ When the migration procedure has begun, rolling back is not possible.
 Ensure you have a working system backup available, in case of an emergency.
 ====
 
+
+
+== Perform a Migration
+
 Before starting the product migration, ensure there are no pending updates or patches.
 Check the [guimenu]``System Status`` on the client system's menu:Details[Overview] page, and install all offered updates or patches.
 If your client system is not uptodate, product migration may fail.
@@ -90,6 +94,8 @@ spacecmd system_scheduleproductmigration help
 
 
 
+=== Perform a Product Mass Migration
+
 .Procedure: Performing a Product Mass Migration
 . List available migration targets, and take note of the system IDs you want to migrate:
 +
@@ -118,3 +124,80 @@ for system in system_ids
 endfor
 ----
 
+
+
+
+=== Product Mass Migration Example: SLES 15 SP2 to SLES 15 SP3
+
+////
+Adjust the following draft text
+
+1 - Create a Mass Product Migration Group
+
+For this example a group will be created temporarily to facilitate the mass migration.
+
+Navigate in the webUI to "SUSEManager > Systems > System Groups" and select "Create Group".
+The created group was named "mpm-target-sles15sp3".
+2 - Add Systems to the Group
+
+Only systems subscribed to the same Base Channel should be added to this group.
+In the example, only systems subscribed to "SLE-Product-SLES15-SP2-Pool for x86_64" were added to the group.
+Any systems that you are not intending to upgrade at this time, should be removed from the group.
+
+See this documentation section for more information about adding clients to groups:
+https://documentation.suse.com/suma/4.2/en/suse-manager/client-configuration/system-groups.html#_add_clients_to_groups
+
+Note or warning about taking normal precautions (backups, make sure fully patched, etc)
+3 - Running the Mass Migration Command
+
+The full command used for this example to upgrade all systems in the group "mpm-target-sles15sp3" from SLES 12 SP2 to SLES 15 SP3:
+# spacecmd -- system_scheduleproductmigration group:mpm-target-sles15sp3 sle-product-sles15-sp3-pool-x86_64 [190,203,195,1242] -d
+
+The syntax for the "system_scheduleproductmigration" command is as follows:
+# spacecmd -- system_scheduleproductmigration <SYSTEM> <BASE_CHANNEL_LABEL> <MIGRATION_TARGET> [options]
+For more information see "spacecmd -- system_scheduleproductmigration help"
+
+Mandatory Syntax
+
+<SYSTEM>
+
+For this example we will use the group we created to select all of the systems from that group:
+group:mpm-target-sles15sp3
+
+<BASE_CHANNEL_LABEL>
+
+This is the label for the target base channel.
+In this case, the system is being upgraded to SLES 15 SP3, and the label is sle-product-sles15-sp3-pool-x86_64.
+
+To see a list of all base channels currently mirrored, run # spacecmd softwarechannel_listbasechannels.
+
+Keep in mind you cannot upgrade to a channel unless it is an available target for your current base channel.
+
+<MIGRATION_TARGET>
+
+To identify this value for systems in the group "group:mpm-target-sles15sp3", you can run:
+# spacecmd -- system_listmigrationtargets group:mpm-target-sles15sp3
+
+The MIGRATION_TARGET parameter must be passed in the following format: [190,203,195,1242]
+
+Options
+-s START_TIME
+-d pass this flag, if you want to do a dry run (it is recommended to run a dry run before the actual migration)
+-c CHILD_CHANNELS (comma-separated child channels labels (with no spaces))
+
+In this case we included the "-d" option, which can be removed after a successful dry run.
+
+If successful, you will see the command output with the following for each scheduled system:
+
+Scheduling Product migration for system mpm-sles152-1
+Scheduled action ID: 66
+
+You can also track the action, in this case the dry run, in the webUI for a given system in the group.
+Navigate to the System > Events > History.
+If there are any failures during the dry run, the system should be investigated.
+
+If all is well, the "-d" option can be removed from the command to run the real migration.
+After the migration is complete, you can reboot the system from the SUSE Manager webUI.
+
+Hope that helps. I'm open to any suggestions, if the example seems like too much, is too complicated, or if it's helpful if it should be reworded, adjusted, or in any other way improved.
+////
