--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -131,23 +131,29 @@ endfor
 
 ////
 Adjust the following draft text
+////
 
-1 - Create a Mass Product Migration Group
+For this example, a group will be created temporarily to facilitate the mass migration.
 
-For this example a group will be created temporarily to facilitate the mass migration.
+.Procedure: Creating a Mass Product Migration Group
 
-Navigate in the webUI to "SUSEManager > Systems > System Groups" and select "Create Group".
-The created group was named "mpm-target-sles15sp3".
-2 - Add Systems to the Group
+. In the {productname} {webui}, navigate to menu:Systems[System Groups], and click btn:[Create Group].
+. Name the group [literal]``mpm-target-sles15sp3``.
 
-Only systems subscribed to the same Base Channel should be added to this group.
-In the example, only systems subscribed to "SLE-Product-SLES15-SP2-Pool for x86_64" were added to the group.
+
+
+Only systems subscribed to the same base channel should be added to the created group.
+In the example, only systems subscribed to [literal]``SLE-Product-SLES15-SP2-Pool for x86_64`` were added to the group.
 Any systems that you are not intending to upgrade at this time, should be removed from the group.
 
-See this documentation section for more information about adding clients to groups:
-https://documentation.suse.com/suma/4.2/en/suse-manager/client-configuration/system-groups.html#_add_clients_to_groups
+.Procedure: Adding Systems to the Group
 
+. For more information about adding clients to groups, see xref:client-configuration:system-groups.adoc#_add_clients_to_groups[].
+
+////
 Note or warning about taking normal precautions (backups, make sure fully patched, etc)
+////
+
 3 - Running the Mass Migration Command
 
 The full command used for this example to upgrade all systems in the group "mpm-target-sles15sp3" from SLES 12 SP2 to SLES 15 SP3:
