fixed broken id container

--- a/modules/installation-and-upgrade/pages/db-migration-xy.adoc
+++ b/modules/installation-and-upgrade/pages/db-migration-xy.adoc
@@ -1,4 +1,4 @@
-[db-migration-xy]]
+[[db-migration-xy]]
 = Database Migration to Latest Version
 
 This section covers upgrading the PostgreSQL database to the latest version.
