--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -93,7 +93,7 @@ ifeval::[{suma-content} == true]
 endif::[]
 ** xref:installation-and-upgrade:client-intro.adoc[Upgrade the Clients]
 *** xref:db-intro.adoc[Upgrade the Database]
-**** xref:db-migration-xy.adoc[Database Migration to Latest Version]
+*** xref:db-migration-xy.adoc[Database Migration to Latest Version]
 ** xref:troubleshooting.adoc[Troubleshooting]
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
