--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -91,7 +91,7 @@ ifeval::[{suma-content} == true]
 **** xref:proxy-x.adoc[Proxy - Major Version Upgrade]
 **** xref:proxy-y-z.adoc[Proxy - Minor Version or Patch Level Upgrade]
 endif::[]
-** xref:installation-and-upgrade:client-intro.adoc[Upgrade the Clients]
+** xref:client-intro.adoc[Upgrade the Clients]
 *** xref:db-intro.adoc[Upgrade the Database]
 *** xref:db-migration-xy.adoc[Database Migration to Latest Version]
 ** xref:troubleshooting.adoc[Troubleshooting]
