--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -154,37 +154,59 @@ Any systems that you are not intending to upgrade at this time, should be remove
 Note or warning about taking normal precautions (backups, make sure fully patched, etc)
 ////
 
-3 - Running the Mass Migration Command
+.Procedure: Running the Mass Migration Command
 
-The full command used for this example to upgrade all systems in the group "mpm-target-sles15sp3" from SLES 12 SP2 to SLES 15 SP3:
-# spacecmd -- system_scheduleproductmigration group:mpm-target-sles15sp3 sle-product-sles15-sp3-pool-x86_64 [190,203,195,1242] -d
+. For this example to upgrade all systems in the group [literal]``mpm-target-sles15sp3`` from SLES 12 SP2 to SLES 15 SP, enter on the command line:
++
+----
+spacecmd -- system_scheduleproductmigration group:mpm-target-sles15sp3 \
+    sle-product-sles15-sp3-pool-x86_64 [190,203,195,1242] -d
+----
 
-The syntax for the "system_scheduleproductmigration" command is as follows:
-# spacecmd -- system_scheduleproductmigration <SYSTEM> <BASE_CHANNEL_LABEL> <MIGRATION_TARGET> [options]
-For more information see "spacecmd -- system_scheduleproductmigration help"
 
-Mandatory Syntax
+The syntax for the [command]``system_scheduleproductmigration`` command is as follows:
+----
+spacecmd -- system_scheduleproductmigration <SYSTEM> <BASE_CHANNEL_LABEL> \
+    <MIGRATION_TARGET> [options]
+----
 
-<SYSTEM>
+For more information, see [command]``spacecmd -- system_scheduleproductmigration help``.
 
+
+
+=== Mandatory Syntax
+
+<SYSTEM>::
 For this example we will use the group we created to select all of the systems from that group:
++
+----
 group:mpm-target-sles15sp3
+----
 
-<BASE_CHANNEL_LABEL>
-
+<BASE_CHANNEL_LABEL>::
 This is the label for the target base channel.
-In this case, the system is being upgraded to SLES 15 SP3, and the label is sle-product-sles15-sp3-pool-x86_64.
-
-To see a list of all base channels currently mirrored, run # spacecmd softwarechannel_listbasechannels.
-
+In this case, the system is being upgraded to SLES 15 SP3, and the label is [literal]``sle-product-sles15-sp3-pool-x86_64``.
++
+To see a list of all base channels currently mirrored, run:
++
+----
+spacecmd softwarechannel_listbasechannels.
+----
++
 Keep in mind you cannot upgrade to a channel unless it is an available target for your current base channel.
 
-<MIGRATION_TARGET>
-
-To identify this value for systems in the group "group:mpm-target-sles15sp3", you can run:
-# spacecmd -- system_listmigrationtargets group:mpm-target-sles15sp3
-
-The MIGRATION_TARGET parameter must be passed in the following format: [190,203,195,1242]
+<MIGRATION_TARGET>::
+To identify this value for systems in the group [literal]``group:mpm-target-sles15sp3``, run:
++
+----
+spacecmd -- system_listmigrationtargets group:mpm-target-sles15sp3
+----
++
+The MIGRATION_TARGET parameter must be passed in the following format:
++
+----
+[190,203,195,1242]
+----
 
 Options
 -s START_TIME
@@ -205,5 +227,3 @@ If there are any failures during the dry run, the system should be investigated.
 If all is well, the "-d" option can be removed from the command to run the real migration.
 After the migration is complete, you can reboot the system from the SUSE Manager webUI.
 
-Hope that helps. I'm open to any suggestions, if the example seems like too much, is too complicated, or if it's helpful if it should be reworded, adjusted, or in any other way improved.
-////
