--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -202,28 +202,29 @@ To identify this value for systems in the group [literal]``group:mpm-target-sles
 spacecmd -- system_listmigrationtargets group:mpm-target-sles15sp3
 ----
 +
-The MIGRATION_TARGET parameter must be passed in the following format:
+The [literal]``MIGRATION_TARGET`` parameter must be passed in the following format:
 +
 ----
 [190,203,195,1242]
 ----
 
-Options
--s START_TIME
--d pass this flag, if you want to do a dry run (it is recommended to run a dry run before the actual migration)
--c CHILD_CHANNELS (comma-separated child channels labels (with no spaces))
-
+Options::
++
+. -s START_TIME
+. -d pass this flag, if you want to do a dry run (it is recommended to run a dry run before the actual migration)
+. -c CHILD_CHANNELS (comma-separated child channels labels (with no spaces))
++
 In this case we included the "-d" option, which can be removed after a successful dry run.
 
 If successful, you will see the command output with the following for each scheduled system:
 
-Scheduling Product migration for system mpm-sles152-1
-Scheduled action ID: 66
+. Scheduling Product migration for system mpm-sles152-1
+. Scheduled action ID: 66
 
-You can also track the action, in this case the dry run, in the webUI for a given system in the group.
-Navigate to the System > Events > History.
+You can also track the action, in this case the dry run, in the {webui} for a given system in the group.
+Navigate to menu:System[Events > History].
 If there are any failures during the dry run, the system should be investigated.
 
 If all is well, the "-d" option can be removed from the command to run the real migration.
-After the migration is complete, you can reboot the system from the SUSE Manager webUI.
+After the migration is complete, you can reboot the system from the {productname} {webui}.
 
