--- a/modules/installation-and-upgrade/pages/uyuni-proxy-registration.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-proxy-registration.adoc
@@ -51,7 +51,7 @@ For more information about bootstrapping, see xref:client-configuration:bootstra
 . Navigate to menu:Salt[Keys] and accept the key.
     When the key is accepted, the new proxy will show in menu:Systems[Overview] in the [guimenu]``Recently Registered Systems`` section.
 
-. Alternatively, in the SUSE Manager Web UI, navigate to menu:System[Bootstrapping].
+. Alternatively, in the {productname} {webui}, navigate to menu:System[Bootstrapping].
 +
 . Navigate to menu:System Details[Software > Software Channels], and check that the proxy channel is selected.
 
