--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -244,7 +244,7 @@ If successful, you will see the command output with the following for each sched
 . Scheduled action ID: 66
 
 You can also track the action, in this case the dry run, in the {webui} for a given system in the group.
-Navigate to menu:System[Events > History].
+From the system details page of the client, Navigate to menu:Events[History].
 If there are any failures during the dry run, the system should be investigated.
 
 If all is well, the "-d" option can be removed from the command to run the real migration.
