--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -2,7 +2,8 @@
 
 = In-place Upgrade of {sles} with {productname}
 
-This workflow shows how to can implement an automated way to complete the task of in-place {sles} upgrade using {productname}.
+This workflow shows how to can implement an automated way to complete the task of in-place {sles} instances upgrade using {productname} Server.
+
 The workflow is applicable for both {salt} and {trad} clients.
 
 == Use case
@@ -23,7 +24,7 @@ Successful completion of this workflow results in consistent, supportable outcom
 . Prepare the {productname} Server for Provisioning
 [role=procedure]
 . Create a SUSE Manager Content Lifecycle Management project for your distribution. 
-  Carefully choose a short-but-descriptive prefix in the name, including ALL source channel modules.  
+  Carefully choose a short-but-descriptive prefix in the name, including all source channel modules.  
   Add Filters as needed
   Add at least one Environment.
 +
@@ -40,15 +41,15 @@ image::wf-inplaceMigration-02.png[scaledwidth=80%]
 . Create an Autoinstallation Distribution in {productname} for each base channel to which you will migrate.  
   In the [guimenu]``Distribution``, reference the specific Base Channel to match the base to which you might migrate, for example the base channel of your CLM project Environment Lifecycle.  
   Label [guimenu]``the Distribution`` something that references your specific Base Channel.  
-  Set the [literal]``Installer Generation`` to match your specific version of SLES (12,15,etc).  
+  Set the [literal]``Installer Generation`` to match your specific version of {sles} (12,15,etc).
   The kernel options will be automatically populated when you click on [guimenu]``Create Autoinstallable Distribution``.  
 . You may create more [guimenu]``Distributions`` depending on the Base Channel you need to assign, and you can re-use the same [literal]``Tree Path`` for the boot media if required.
 +
 image::wf-inplaceMigration-03.png[scaledwidth=80%]
 +
 . Click on [guimenu]``Profiles``, and upload Kickstart/Autoyast File for each target SLES distribution, service pack and channels you wish to migrate to.  
-  This profile will be associated with the activation key and autoinstallation istribution created above. 
-  Cut-and-paste a [literal]``Profile`` template as the basis for what you upload, assign it the [literal``Autoinstall tree`` you created as a [literal]``Distribution`` above.  
+  This profile will be associated with the activation key and autoinstallation distribution created above. 
+  Cut-and-paste a [literal]``Profile`` template as the basis for what you upload, assign it the [literal]``Autoinstall tree`` you created as a [literal]``Distribution`` above.  
   Do not put anything in the [literal]``Virtualizaton Type`` box, and select [btn]``Create``.
 . Once created, your profile will now have some new fields on this [guimenu``Details`` page.  
   In the [literal]``Kernel Options`` line on this [literal]``Details`` page, put in
@@ -61,7 +62,7 @@ autoupgrade=1 insecure=1 useonlinerepo
 +
 image::wf-inplaceMigration-04.png[scaledwidth=80%]
 +
-. Click on the variables tab in your Autoinstallation Profile to specify CLM prefix, Activation Key, distrotree, and organization:
+. Click on the variables tab in your Autoinstallation Profile to specify CLM prefix, Activation Key, Distrotree, and Organization:
 +
 image::wf-inplaceMigration-05.png[scaledwidth=80%]
 +
@@ -73,10 +74,16 @@ Sample Variables:
 * [literal]``channel_prefix=15sp1-demo-test``
 * [literal]``distrotree=15sp1-demo-test``
 
-Edit the autoyast profile itself in a tool where you can use cut-and-paste for the channels in your profile.  
+Edit the Autoyast profile itself in a tool where you can use cut-and-paste for the channels in your profile.  
 Use variables in your profiles where possible.  
-Much time has gone into creating some useful Profiles which should be used as a starting point.  
-There are links at the bottom of this document. (<< ARE THERE? THEY ARE VERY BIG TO BE ADDED TO TEH DOC. HOW CAN WE DISTRIBUTE THEM?)
+
+Much time has gone into creating some useful Profiles which should be used as a starting point. 
+
+[NOTE] 
+====
+Due to the size of these files, they are not included in the documentation.
+Please contact support team if you need the example profile files.
+====
 
 The profile follows autoyast xml guidelines, and for an in-place upgrade there are several important sections:
 
@@ -110,7 +117,7 @@ For {trad} clients, go to <<in-place-migration-traditional-clients>>.
 Procedure: Migrating Salt minions
 [role=procedure]
 
-. Prior to migration, be sure to check Software → Non-Compliant.  
+. Prior to migration, be sure to check [guimenu]``Software → Non-Compliant``.  
   This will show any orphaned packages on your system - those {productname} does not find in any assigned channel.  
   Make sure this list is very small or empty, and that you can account for all the packages there.  
 Delete any that are unnecessary.
@@ -121,7 +128,7 @@ Delete any that are unnecessary.
 rm -rf /etc/zypp/repos.d/susemanager*
 ----
 +
-. Assign your Autoinstallation Profile in [guimenu]``System Details>Provisioning`` for one system, or in the [literal]``Provisioning`` tab in SSM for as many systems as you need. 
+. Assign your Autoinstallation Profile in [guimenu]``System Details → Provisioning`` for one system, or in the [literal]``Provisioning`` tab in SSM for as many systems as you need. 
   {productname} provisioning then auto-assigns a Reactivation Key to this system, that is referenced in the provisioning process.  
   If you need to perform the upgrade through a particular {productname} Proxy you will need to group just those systems together in SSM.
 +
@@ -150,7 +157,7 @@ If your profile is clean, it should complete an in-place migration in about 30 m
 Procedure: Migrating {trad} clients
 [role=procedure]
 
-. Assign your Autoinstallation Profile in [guimenu]``System Details>Provisioning`` for one system, or in the [guimenu]``Provisioning`` tab in [literal]``SSM`` for as many systems as you need. 
+. Assign your Autoinstallation Profile in [guimenu]``System Details → Provisioning`` for one system, or in the [guimenu]``Provisioning`` tab in [literal]``SSM`` for as many systems as you need. 
  If your system is able to use PXE, it can be completely automated from here.
 
 . If your system is not able to use PXE, you can create an ISO to install with cobbler commands using the SUSE Manager server CLI. 
