--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -45,7 +45,7 @@ The differences common to all reports are:
 - in all reports the new columns ``mgm_id`` and ``synced_date`` have been introduced to identify the management server in the hub scenario and the last time the information was updated from the application database;
 - all boolean values are now represented by the ``True``/``False`` and not by a ``1``/``0`` values;
 - the column ``org_id`` has been replaced by ``organization``, which contains the organization name and not the numerical identifier;
-- The term "server" has been replaced by "system". So, for example, the column ``server_id`` is now called ``system_id``.
+- The term "server" has been replaced by "system." So, for example, the column ``server_id`` is now called ``system_id``.
 
 For report specific changes, see <<report-list>>.
 
