--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -122,7 +122,7 @@ Procedure: Migrating Salt minions
   Make sure this list is very small or empty, and that you can account for all the packages there.  
 Delete any that are unnecessary.
 +
-. Before provisioning, issue the following Remote Command to the system(s) you wish to upgrade to remove the existing {productname} channels during the upgrade process: 
+. Before provisioning, issue the following Remote Command to the systems you wish to upgrade to remove the existing {productname} channels during the upgrade process: 
 +
 ----
 rm -rf /etc/zypp/repos.d/susemanager*
@@ -136,7 +136,7 @@ image::wf-inplaceMigration-06.png[scaledwidth=80%]
 +
 image::wf-inplaceMigration-07.png[scaledwidth=80%]
 
-{productname} creates the proper entry in [path]``/etc/grub.d/`` for the reinstallation, and boots the selected system(s) to that entry.  
+{productname} creates the proper entry in [path]``/etc/grub.d/`` for the reinstallation, and boots the selected systems to that entry.  
  The Profile you created above will be used to drive automated upgrade, following which your system will use the reactivation key (one time), associating the upgraded system with the previous {productname} profile.
 
 The Session Status screen in {productname} will not be updated real-time for {salt} minions.  
