--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -59,8 +59,20 @@ To build images with {productname}, you need to create and configure a build hos
 Container build hosts are Salt clients running {sle} 12 or later.
 This section guides you through the initial configuration for a build host.
 
-From the {productname} {webui}, perform these steps to configure a build host:
 
+
+[IMPORTANT]
+====
+The operating system on the build host must match the operating system on the targeted image.
+
+For example, build {sles}{nbsp}15 based images on a build host running  {sles}{nbsp}15 (SP2 or later) OS version.
+Build {sles}{nbsp}12 based images on a build host running {sles}{nbsp}12 SP4 or {sles}{nbsp}12 SP3 OS version.
+
+Cross-architecture builds are not possible.
+For example, you must build Raspberry PI {sles}{nbsp}15 SP3 image on a Raspberry PI (aarch64 architecture) build host running {sles}{nbsp}15 SP3.
+====
+
+From the {productname} {webui}, perform these steps to configure a build host:
 
 . Select a Salt client to be designated as a build host from the menu:Systems[Overview] page.
 . From the [guimenu]``System Details`` page of the selected client assign the containers modules.
